bug: fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ html {
 body {
   background-color: #ffffff;
   text-align: center;
-  /* min-height: 100vh; */
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 header,
